fixed the modal not aligning correctly

--- a/src/Components/ErrorModal/ErrorModal.module.css
+++ b/src/Components/ErrorModal/ErrorModal.module.css
@@ -15,6 +15,7 @@
   width: 80%;
   z-index: 100;
   overflow: hidden;
+  box-sizing: border-box;
 }
 
 .header {
